--- a/DirectXMesh/DirectXMesh_Desktop_2015.vcxproj
+++ b/DirectXMesh/DirectXMesh_Desktop_2015.vcxproj
@@ -380,6 +380,7 @@
   </ItemDefinitionGroup>
   <ItemGroup />
   <ItemGroup>
+    <ClCompile Include="DirectXMeshWeldVertices.cpp" />
     <CLInclude Include="DirectXMesh.h" />
     <CLInclude Include="DirectXMeshP.h" />
     <CLInclude Include="DirectXMesh.inl" />
@@ -388,6 +389,8 @@
     <ClCompile Include="DirectXMeshGSAdjacency.cpp" />
     <ClCompile Include="DirectXMeshNormals.cpp" />
     <ClCompile Include="DirectXMeshOptimize.cpp" />
+    <ClCompile Include="DirectXMeshOptimizeLRU.cpp" />
+    <ClCompile Include="DirectXMeshOptimizeTVC.cpp" />
     <ClCompile Include="DirectXMeshRemap.cpp" />
     <ClCompile Include="DirectXMeshTangentFrame.cpp" />
     <ClCompile Include="DirectXMeshUtil.cpp">
